--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="I am Predrag Ilijev, a web developer from Serbia. Here you can check out my portfolio and get an idea of what I do. If you have any questions, make sure to do it using the contact form at the bottom of the site.">
         <link rel="stylesheet" type="text/css" href="css/style-min.css">
         <link rel="stylesheet" type="text/css" href="css/res-min.css">
+        <link rel="stylesheet" type="text/css" href="css/all.min.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
@@ -51,7 +52,8 @@
                             <div class="overlay">
                                 <h3>Comic Booker</h3>
                                 <p>
-                                    A site which sells Comicbooks.
+                                    <label>- HTML5, CSS3 -</label> </br>
+                                    (Static, Not Responsive)
                                 </p>
                             </div>
                         </a>
@@ -62,7 +64,8 @@
                             <div class="overlay">
                                 <h3>Photo Editors</h3>
                                 <p>
-                                    A site that helps you learn Photo Editing.
+                                    <label>- HTML5, CSS3, Bootstrap -</label> </br>
+                                    (Static, Responsive)
                                 </p>
                             </div>
                         </a>
@@ -73,7 +76,8 @@
                             <div class="overlay">
                                 <h3>Digital Marketing</h3>
                                 <p>
-                                    Everything about digital marketing can be found here.
+                                    <label>- HTML5, CSS3, Materialize -</label> </br>
+                                    (Dynamic, Responsive)
                                 </p>
                             </div>
                         </a>
@@ -84,7 +88,8 @@
                             <div class="overlay">
                                 <h3>Music Shop</h3>
                                 <p>
-                                    Online music store. Either buy or sell your own music.
+                                    <label>- HTML5, CSS3, Bootstrap, PHP -</label> </br>
+                                    (Static, Responsive)
                                 </p>
                             </div>
                         </a>
@@ -95,7 +100,8 @@
                             <div class="overlay">
                                 <h3>Engineer's workshop</h3>
                                 <p>
-                                    A great website aimed towards engineers and artists.
+                                    <label>- HTML5, CSS3, Bootstrap -</label> </br>
+                                    (Dynamic, Responsive)
                                 </p>
                             </div>
                         </a>
@@ -106,7 +112,8 @@
                             <div class="overlay">
                                 <h3>A personal blog</h3>
                                 <p>
-                                    A website teaching people how to make their own blog.
+                                    <label>- HTML5, CSS3, Materialize, JQuery, Javascript -</label> </br>
+                                    (Dynamic, Responsive)
                                 </p>
                             </div>
                         </a>
@@ -119,28 +126,52 @@
                 <h2>- SKILLS -</h2>
                 <div id="skillstypes">
                     <div class="type">
-                        <img src="img/html.png" alt="Skill icon">
-                        <h3>HTML</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/html.png" alt="Skill icon">-->
+                            <i class="fab fa-9x fa-html5"></i>
+                            <h3>HTML</h3>
+                            <p class="highly">Highly Proficient</p>
+                        </div>
                     </div>
                     <div class="type">
-                        <img src="img/css.png" alt="Skill icon">
-                        <h3>CSS</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/css.png" alt="Skill icon">-->
+                            <i class="fab fa-9x fa-css3-alt"></i>
+                            <h3>CSS</h3>
+                            <p class="highly">Highly Proficient</p>
+                        </div>
                     </div>
                     <div class="type">
-                        <img src="img/bootstr.png" alt="Skill icon">
-                        <h3>BOOTSTRAP</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/ps.png" alt="Skill icon">-->
+                            <i class="fab fa-9x fa-adobe"></i>
+                            <h3>PHOTOSHOP</h3>
+                            <p class="highly">Highly Proficient</p>
+                        </div>
                     </div>
                     <div class="type">
-                        <img src="img/ilus.png" alt="Skill icon">
-                        <h3>ILLUSTRATOR</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/ilus.png" alt="Skill icon">-->
+                            <i class="fas fa-9x fa-search"></i>
+                            <h3>SEO</h3>
+                            <p>Proficient</p>
+                        </div>
                     </div>
                     <div class="type">
-                        <img src="img/ps.png" alt="Skill icon">
-                        <h3>PHOTOSHOP</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/bootstr.png" alt="Skill icon">-->
+                            <i class="fab fa-9x fa-bootstrap"></i>
+                            <h3>BOOTSTRAP</h3>
+                            <p>Proficient</p>
+                        </div>
                     </div>
                     <div class="type">
-                        <img src="img/mat.png" alt="Skill icon">
-                        <h3>MATERIALIZE</h3>
+                        <div class="ovr2">
+                            <!--<img src="img/mat.png" alt="Skill icon">-->
+                            <i class="fab fa-9x fa-medium"></i>
+                            <h3>MATERIALIZE</h3>
+                            <p class="begn">Beginner</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,7 +181,15 @@
                     <div id="image">
                         <img src="img/profile3.png" alt="Profile picture">
                     </div>
-                    <p>I am a web designer living in Serbia, used to working on freelance work and projects. I specialise in web design & art as well as photo and video editing. I'm currently studying at ICT College, constantly and consistently learning new things. </br></br>Feel free to send me a message down below!</p>
+                    <p>I am a web designer living in Serbia, used to working on freelance work and projects. I specialise in web design & art as well as photo and video editing. I'm currently studying IT, constantly and consistently learning new things.</br>
+                    </br>General info:
+                    <label>
+                        </br><i class="fas fa-user"></i> Predrag Ilijev
+                        </br><i class="fas fa-envelope"></i> predrag.ilijev.196.19@ict.edu.rs
+                        </br><i class="fas fa-phone-alt"></i> +381657483500
+                        </br><i class="fas fa-university"></i> ICT College
+                    </label>
+                    </p>
                 </div>
             </div>
             <footer id="contact">
@@ -185,7 +224,7 @@
                 </div>
                 
             </footer>
-            <div id="ftcopyright"><p>&copy; Copyright - Predrag Ilijev</p></div>
+            <div id="ftcopyright"><p>&copy; Copyright - Predrag Ilijev - 2020.</p></div>
         </main>
     </body>
 </html>
