--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
                 
             </footer>
-            <div id="ftcopyright"><p>&copy; Copyright - Predrag Ilijev - 2020.</p></div>
+            <div id="ftcopyright"><p>&copy; Copyright 2020. - Predrag Ilijev 196/19 </p></div>
         </main>
     </body>
 </html>
