--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="overlay">
                                 <h3>Music Shop</h3>
                                 <p>
-                                    <label>- HTML5, CSS3, Bootstrap, PHP -</label> </br>
+                                    <label>- HTML5, CSS3, Bootstrap -</label> </br>
                                     (Static, Responsive)
                                 </p>
                             </div>
@@ -112,7 +112,7 @@
                             <div class="overlay">
                                 <h3>A personal blog</h3>
                                 <p>
-                                    <label>- HTML5, CSS3, Materialize, JQuery, Javascript -</label> </br>
+                                    <label>- HTML5, CSS3, Materialize -</label> </br>
                                     (Dynamic, Responsive)
                                 </p>
                             </div>
